[package]
name = "url-shortener"
authors = ["adwd <ecdt.mn@gmail.com>"]
description = ""
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
anyhow = "1"
http = "0.2"
serde = { version = "1.0.193", features = ["derive"] }
spin-sdk = { git = "https://github.com/fermyon/spin", tag = "v2.0.1" }

[workspace]
